animaiton and video optimisation

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
 /* 
 :root {
   --background: #ffffff;
@@ -37,4 +40,24 @@ h3 {
 .absolute.text-right > p {
   opacity: 0;
   transform: translateY(20px);
+}
+/* In globals.css */
+
+/* Set the default poster (background) for the video element */
+video[poster] {
+  object-fit: cover; /* Ensures the poster image covers the element */
+  background-image: url("/poster-sm.png");
+  background-size: cover;
+  background-position: center;
+}
+
+/* On larger screens, switch to the large poster */
+@media (min-width: 1024px) {
+  video[poster] {
+    background-image: url("/poster-lg.png");
+  }
+}
+
+.will-change-transform-filter {
+  will-change: transform, filter;
 }
